--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 body {
   margin: 0;
@@ -86,6 +92,34 @@ body {
 .generate-button:hover{
   background-color: white;
 }
+.download-share{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+  font-weight: 500;
+  border-radius: 8px;
+  text-transform: uppercase;
+  width: 80%;
+  cursor: pointer;
+}
+.button{
+  margin: 8px 0;
+  background-color: #ffef5f75;
+  border-radius: 8px;
+  padding: 8px;
+  width: 100%;
+}
+.button:hover{
+  background-color: #ffef5f;
+}
+.disable{
+  opacity: 30%;
+  cursor: not-allowed;
+}
 /* ---------------Search Section--------------- */
 
 .search-section>input{
@@ -96,6 +130,11 @@ body {
   border-radius: 6px;
   border: none;
   width: 80%;
+  text-transform: uppercase;
+}
+.search-section>input::placeholder{
+  text-transform: uppercase;
+  opacity: 70%;
 }
 .search-section>input:active{
   border: none;
